--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /Exercícios-OCP/ProcessoDaSalaDeEmergenciaRefatorado/nbproject/private/
 /Exercícios-OCP/ProcessoDaSalaDeEmergenciaRefatorado/build/
+/Exercícios-LSP/School/nbproject/private/
+/Exercícios-LSP/School/build/
+/Exercícios-LSP/SchoolRefactored/nbproject/private/
