add .docx & start Exercícios-ISP

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Exercícios-LSP/School/nbproject/private/
 /Exercícios-LSP/School/build/
 /Exercícios-LSP/SchoolRefactored/nbproject/private/
+/Exercícios-ISP/CustomerTransaction/nbproject/private/
