finish Exercícios-ISP

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Exercícios-LSP/School/build/
 /Exercícios-LSP/SchoolRefactored/nbproject/private/
 /Exercícios-ISP/CustomerTransaction/nbproject/private/
+/Exercícios-ISP/CustomerTransactionRefactored/nbproject/private/
