add exercícios 1 e 2 @ 3a-lista

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /Exercícios-LSP/SchoolRefactored/nbproject/private/
 /Exercícios-ISP/CustomerTransaction/nbproject/private/
 /Exercícios-ISP/CustomerTransactionRefactored/nbproject/private/
+/3a-lista/Exercicio1/nbproject/private/
+/3a-lista/Exercicios/nbproject/private/
+/3a-lista/Exercicios/build/
